# AIVision

./: .gitignore  README.md  package-lock.json  package.json  start-aivision.ps1  start-dev-full.cmd  stop-aivision.ps1
.codex/environments/: environment.toml
docs/: awesome-dicom-for-aivision.md  clinical-requirements.md  iaorta-technical-analog.md  inobitek-manual-parity-matrix.md  omniview-implementation-plan.md  omniview-reference.md  product-vision.md  radiology-workstation-benchmark.md  reference-datasets.md  roadmap.md  step-01.md  technical-3d-vascular-visualization.md  technical-dossier-aivision.md  technical-spec.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
inference/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  presets.json  pyproject.toml  requirements-totalsegmentator.txt  requirements.txt
inference/app/: __init__.py  aorta_mask_stats.py  main.py  schemas.py  totalsegmentator_service.py
inference/src/: __init__.py
inference/src/api/: main.py
inference/src/config/: __init__.py  models.py
inference/src/dataio/: __init__.py  dicom_loader.py
inference/src/mesh/: __init__.py  reconstruction.py
inference/src/preprocessing/: __init__.py  normalization.py
inference/src/segmentation/: __init__.py  backends.py  bone_removal.py  vessel_seg.py
inference/src/services/: __init__.py  dicom_loader.py  mesh_generator.py  presets.py  processor.py
inference/tests/: test_mask_to_stl.py  test_vessel_seg_report.py
scripts/: run-inference.mjs
(+53 files in other folders)
